# Weather-Report

./: .env.example  .gitattributes  .gitignore  EXAMPLES.md  README.md  SECURITY.md  TOOLS.md  launch.pyw  pyproject.toml  requirements.txt  run.cmd
artifacts/: rctf_login.py
ctf_copilot/: __init__.py  app.py
ctf_copilot/browser/: dom_summarizer.py  download_manager.py  page_observer.py  playwright_session.py  screenshot_manager.py
ctf_copilot/core/: config.py  events.py  knowledge.py  permissions.py  proc.py  project.py  site_scanner.py  solver.py  state.py  updater.py
ctf_copilot/data/: migrations.sql
ctf_copilot/gui/: browser_panel.py  challenge_panel.py  chat_panel.py  main_window.py  qt_bridge.py  settings_dialog.py  tools_panel.py  worker.py  writeup_panel.py
ctf_copilot/llm/: claude_client.py  conversation_memory.py  prompt_builder.py  token_budget.py  tool_router.py
ctf_copilot/tools/: crypto_tools.py  file_analyzer.py  forensic_tools.py  interactive.py  media.py  osint_tools.py  pwn_tools.py  registry.py  reverse_tools.py  runner.py  sandbox.py  stego_tools.py  web_research.py  web_tools.py
ctf_copilot/writeup/: generator.py  templates.py
examples/: serve_toy_ctf.py  toy_ctf.html
packaging/: build.py
scripts/: make_shortcut.ps1
tests/: test_core_logic.py  test_file_analyzer.py  test_knowledge_research.py  test_media.py  test_permissions.py  test_phase1.py  test_project_and_writeup.py  test_runner_autonomy.py  test_scoped_bus.py  test_site_scanner.py  test_updater.py
